IG-226 updated swagger with collections
